<resources>
    <string name="app_name">DataLab</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Logout</string>

    <string name="email_hint">Enter Email Address</string>
    <string name="pwd_hint">Enter Password</string>
    <string name="login_label">Login</string>

    <string name="SHARED_PREFS">edu.uw.tacoma.mmuppa.datalab.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="LOGGEDIN_DEFAULT">false</string>

    <string name="ACCT_FILE">edu.uw.tacoma.mmuppa.datalab.ACCT_FILE</string>

    <string name="delete">Delete</string>
    <string name="reset">Reset Password</string>
    <string name="curr_pwd_hint">Enter Current Password</string>
    <string name="new_pwd_hint">Enter New Password</string>

</resources>
