<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context="edu.uw.tacoma.mmuppa.datalab.ResetPasswordFragment">

    <TextView
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/curr_pwd_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/curr_pwd_hint" />

    <EditText
        android:id="@+id/new_pwd_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_pwd_hint" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/reset" />

</LinearLayout>
